# src/main/java/com/springboot/desafio/controllers/ExceptionHandlerController.java
@@ -1,0 +1,40 @@
+package com.springboot.desafio.controllers;
+
+import com.springboot.desafio.exceptions.AuthException;
+import com.springboot.desafio.exceptions.LoginException;
+import com.springboot.desafio.exceptions.TareaException;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.ControllerAdvice;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+
+import java.util.HashMap;
+import java.util.Map;
+
+@ControllerAdvice
+public class ExceptionHandlerController {
+
+    @ExceptionHandler(TareaException.class)
+    public ResponseEntity<Object> handleCrearTareaException(TareaException ex) {
+        Map<String, Object> body = new HashMap<>();
+        body.put("mensaje", ex.getMessage());
+        return new ResponseEntity<>(body, HttpStatus.BAD_REQUEST);
+    }
+
+    @ExceptionHandler(AuthException.class)
+    public ResponseEntity<Object> handleAuthException(AuthException ex){
+        Map<String, Object> body = new HashMap<>();
+        body.put("mensaje", ex.getMessage());
+        return new ResponseEntity<>(body, HttpStatus.UNAUTHORIZED);
+    }
+
+    @ExceptionHandler(LoginException.class)
+    public ResponseEntity<Object> handleLoginException(LoginException ex){
+        Map<String, Object> body = new HashMap<>();
+        body.put("codigo", "01");
+        body.put("mensaje", ex.getMessage());
+        return new ResponseEntity<>(body, HttpStatus.BAD_REQUEST);
+    }
+
+
+}
