# src/main/java/com/springboot/desafio/model/User.java
@@ -1,0 +1,36 @@
+package com.springboot.desafio.model;
+
+import javax.persistence.*;
+import javax.validation.constraints.NotNull;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+import java.util.Collection;
+
+@Entity
+@Getter
+@Setter
+@AllArgsConstructor
+@NoArgsConstructor
+@Table(name = "usuario")
+public class User {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+    @NotNull
+    private String username;
+    @NotNull
+    private String password;
+
+    @OneToMany(fetch = FetchType.EAGER, cascade = CascadeType.ALL)
+    private Collection<Authority> authorities;
+
+    public User(String username, String password, Collection<Authority> authorities) {
+        this.username = username;
+        this.password = password;
+    }
+
+}
